--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.1",
-        "squizlabs/php_codesniffer": "1.4.*",
-        "satooshi/php-coveralls": "~0.6"
+        "squizlabs/php_codesniffer": "~2.0"
     },
     "autoload" : {
         "psr-4" : {
